add Google Cloud Store service
